Created different view elements to populate the view

--- a/src/main/resources/templates/patient/signup.html
+++ b/src/main/resources/templates/patient/signup.html
@@ -10,7 +10,7 @@
         <div class="card-header text-center">
           <h1>Register</h1>
         </div>  
-        <form class="card-body">
+        <form class="card-body" method="post" action="/patient/add">
 				  <div class="form-row">
 				    <div class="form-group col-md-6">
 				      <label for="inputFirstName">First Name</label>
