--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,16 @@
         </div>
         <form method="POST" th:action="@{/login}">
   <div class="form-group">
+    <div th:if="${param.error}">
+        <div class="alert alert-danger">
+            Invalid username/password.
+        </div>
+    </div>
+    <div th:if="${param.logout}">
+        <div class="alert alert-info">
+            You are now logged out.
+        </div>
+    </div>
     <label for="exampleInputUsername">Username</label>
     <input type="text" class="form-control" id="exampleInputUsername" name="username" aria-describedby="usernameHelp" placeholder="Enter username">
     <small id="usernameHelp" class="form-text text-muted">We'll never share your details with anyone else.</small>
