--- a/src/main/resources/templates/patient/all.html
+++ b/src/main/resources/templates/patient/all.html
@@ -3,18 +3,28 @@
 <head th:replace="includes/header :: header" />
 <body>
   <div class="container">
-    <nav th:replace="includes/navbar :: navbar-default"></nav>
+    <nav th:replace="includes/patientnav :: navbar-patient"></nav>
     <div class="row justify-content-center">
       <div class="col-md-6 col-md-offset-3">
         <h1>Pfizer: Patient Home</h1>
       </div>
-      <table>
-		    <tr th:each="patient : ${patients}">
-		        <td th:text="${patient.patient_id}"></td>
-		        <td><a href="#" th:text="${patient.first_name}"></a></td>
-		        <td th:text="${patient.last_name}"></td>
-		        <td th:text="${patient.phone_no}"></td>
-		    </tr>
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">Patient #</th>
+            <th scope="col">First Name</th>
+            <th scope="col">Last Name</th>
+            <th scope="col">Phone No</th>            
+          </tr>
+        </thead>
+        <tbody>
+			    <tr th:each="patient : ${patients}">
+			        <th scope="row" th:text="${patient.patient_id}"></th>
+			        <td th:text="${patient.first_name}"></td>
+			        <td th:text="${patient.last_name}"></td>
+			        <td th:text="${patient.phone_no}"></td>
+			    </tr>
+			  </tbody>
 		  </table>
     </div>
   </div>
