--- a/src/main/resources/templates/patient/signup.html
+++ b/src/main/resources/templates/patient/signup.html
@@ -10,40 +10,37 @@
         <div class="card-header text-center">
           <h1>Register</h1>
         </div>  
-        <form class="card-body" method="post" action="/patient/add">
+        <form class="card-body" method="post" th:action="@{/patient/add}">
 				  <div class="form-row">
 				    <div class="form-group col-md-6">
 				      <label for="inputFirstName">First Name</label>
-				      <input required type="text" class="form-control" id="inputFirstName" name="firstname" placeholder="First Name">
+				      <input required type="text" class="form-control" id="inputFirstName" name="first_name" placeholder="First Name">
 				    </div>
 				    <div class="form-group col-md-6">
 				      <label for="inputLastName">Last Name</label>
-				      <input required type="text" class="form-control" id="inputLastName" name="lastname" placeholder="Last Name">
+				      <input required type="text" class="form-control" id="inputLastName" name="last_name" placeholder="Last Name">
 				    </div>
 				  </div>
 				  <div class="form-group">
-				    <label for="inputAddress">Address</label>
-				    <input required type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-				  </div>
-				  <div class="form-group">
-				    <label for="inputAddress2">Address 2</label>
-				    <input required type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-				  </div>
+            <div class='input-group date' id='datetimepicker5'>
+              <input type='text' class="form-control" name="dob" placeholder="MM/DD/YYYY"/>
+            </div>
+          </div>
 				  <div class="form-row">
 				    <div class="form-group col-md-6">
 				      <label for="inputCity">City</label>
-				      <input required type="text" class="form-control" id="inputCity">
+				      <input required type="text" class="form-control" id="inputCity" name="city">
 				    </div>
 				    <div class="form-group col-md-4">
 				      <label for="inputState">State</label>
-				      <input required type="text" class="form-control" id="inputState">
+				      <input required type="text" class="form-control" id="inputState" name="country">
 				    </div>
 				    <div class="form-group col-md-2">
-				      <label for="inputZip">Zip</label>
-				      <input required type="text" class="form-control" id="inputZip">
+				      <label for="inputZip">Phone No</label>
+				      <input required type="text" class="form-control" id="inputZip" name="phone_no" placeholder="Phone Number">
 				    </div>
 				  </div>
-				  <button type="submit" class="btn btn-primary">Sign in</button>
+				  <button type="submit" class="btn btn-primary">Submit</button>
 				  </form>
 				</div>
       </div>
