--- a/src/main/resources/templates/includes/navbar.html
+++ b/src/main/resources/templates/includes/navbar.html
@@ -2,32 +2,29 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
     <nav th:fragment="navbar-default" class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Pfizer</a>
+        <a class="navbar-brand" href="/"><span class="badge badge-warning">Pfizer</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-    
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">
+                    <a class="nav-link" href="/">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">
+                    <a class="nav-link" href="#">About</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
+                <li class="nav-item" th:if="${#authorization.expression('!isAuthenticated()')}">
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Disabled</a>
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+                    <a class="nav-link" href="/appointments">Appointments</a>
+                </li>
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+                    <a class="nav-link" href="/payments">Payments</a>
+                </li>
+                <li class="nav-item" th:if="${#authorization.expression('isAuthenticated()')}">
+                    <a class="nav-link" href="/patient/all">More</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
@@ -38,7 +35,7 @@
                   <a th:href="@{/signup}" class="btn btn-outline-primary">Signup</a>
                 </li>
                 <li th:if="${#authorization.expression('isAuthenticated()')}" class="nav-item">
-                  <a th:href="@{/info}" class="login-btn btn btn-outline-primary">Know More</a>
+                  <a th:href="@{/signup}" class="login-btn btn btn-outline-primary">Edit Profile</a>
                 </li>
                 <li th:if="${#authorization.expression('isAuthenticated()')}" class="nav-item">
                   <a th:href="@{/logout}" class="btn btn-outline-danger">Logout</a>
