--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,6 @@
       </div>
     </div>
   </div>
-  <div th:replace="includes/body-scripts :: body-scripts"></div>
+  <div th:replace="includes/footer :: footer-default"></div>
 </body>
 </html>
