--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,13 +12,19 @@
           <form method="POST" th:action="@{/login}">
             <div class="form-group">
               <div th:if="${param.error}">
-                <div class="alert alert-danger">
+                <div class="alert alert-danger alert-dismissable fade show">
                   Invalid username/password.
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+								    <span aria-hidden="true">&times;</span>
+								  </button>
                 </div>
               </div>
               <div th:if="${param.logout}">
-                <div class="alert alert-info">
+                <div class="alert alert-info alert-dismissable fade show">
                   You are now logged out.
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
                 </div>
               </div>
               <label for="exampleInputUsername">Username</label>
@@ -40,6 +46,6 @@
         </div>
       </div>
     </div>
-    <div th:replace="includes/body-scripts :: body-scripts"></div>
+    <div th:replace="includes/footer :: footer-default"></div>
   </body>
 </html>
