--- a/src/main/resources/templates/patient/patienthome.html
+++ b/src/main/resources/templates/patient/patienthome.html
@@ -11,6 +11,6 @@
       
     </div>
   </div>
-  <div th:replace="includes/body-scripts :: body-scripts"></div>
+  <div th:replace="includes/footer :: footer-default"></div>
 </body>
 </html>
