Added the new footer into the page

--- a/src/main/resources/templates/patient/signup.html
+++ b/src/main/resources/templates/patient/signup.html
@@ -46,6 +46,6 @@
       </div>
     </div>
   </div>
-  <div th:replace="includes/body-scripts :: body-scripts"></div>
+  <div th:replace="includes/footer :: footer-default"></div>
 </body>
 </html>
